--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ HTML CSS JSResult Skip Results Iframe
       <input class="password" type="password" autocomplete="off" placeholder="Password"/>
       <button class="password-button">Show</button>
     </label>
-    <button class="login-button">Login</button>
+    <button class="login-button">Login karo</button>
   </div>
   <div class="social-buttons">
     <div class="social">
